small spacing fix
this will certainly change eventually, but a temporary fix here otherwise I'd go crazy.

--- a/docs/assets/css/index.css
+++ b/docs/assets/css/index.css
@@ -151,7 +151,7 @@ nav ul {
   background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
   background: -webkit-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
   box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
-  padding: 0 20px;
+  padding: 0 5px;
   /* border-radius: 10px; Not a fan of the rounded corners right now*/ 
   list-style: none;
   position: fixed;
